# hemoglobin

./: Cargo.toml  README.md  cards.json  out.json
src/: cards.rs  lib.rs  numbers.rs  search.rs
src/.helix/: languages.toml
src/cards/: functions.rs  kins.rs  properties.rs  rich_text.rs  types.rs
src/cards/rich_text/: serde.rs
src/numbers/: compare.rs  imprecise_eq.rs  imprecise_ord.rs
src/search/: fuzzy.rs  query_parser.rs
tests/: rich.json  search.json
