[package]
name = "hemoglobin"
description = "Utilities for Bloodless"
license = "MIT"
version = "0.7.2"
edition = "2021"
authors = ["Arity <katie-and@ampersandia.net>"]
readme = "README.md"
repository = "https://github.com/Lilith-In-Starlight/hemoglobin"

[dependencies]
chumsky = "0.9.3"
rand = "0.8.5"
regex = "1.10.5"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.117"
