[package]
name = "hemoglobin"
description = "Utilities for Bloodless"
license = "MIT"
version = "0.8.0"
edition = "2021"
authors = ["Arity <katie-and@ampersandia.net>"]
readme = "README.md"
repository = "https://github.com/Lilith-In-Starlight/hemoglobin"

[dependencies]
chumsky = "0.10.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
regex = "1.10.5"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.117"
