[package]
name = "hemoglobin"
description = "Utilities for Bloodless"
license = "MIT"
version = "0.9.0"
edition = "2024"
authors = ["Arity <katie-and@ampersandia.net>"]
readme = "README.md"
repository = "https://github.com/Hemolymph/hemoglobin"

[dependencies]
const_format = "0.2.34"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
regex = "1.11.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_regex = "1.1.0"

[dev-dependencies]
serde_json = "1.0.117"
